k8s/parts/01-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database
        - name: init-script
          configMap:
            name: mysql-setup
            items:
              - key: create.sql
                path: create.sql
        - name: mysql-cnf
          configMap:
            name: mysql-setup
            items:
              - key: leocloud.cnf
                path: leocloud.cnf                  
      containers:
        - name: mysql
          image: mysql:8
#          command: ["tail", "-f", "/dev/null"]
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: mysql-cnf
              mountPath: /etc/mysql/conf.d/leocloud.cnf
              subPath: leocloud.cnf
              readOnly: true      
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    component: mysql
