k8s/parts/02-appsrv.yaml
# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appsrv
  template:
    metadata:
      labels:
        app: appsrv
    spec:
      containers:
        - name: appsrv
          image: ghcr.io/$GITHUB_ACCOUNT/leocloud-appsrv:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 1024Mi
              cpu: 1024m
      volumes:
        - name: init-script
          configMap:
            name: mysql-setup
            items:
              - key: wait.sh
                path: wait.sh
            defaultMode: 0744
---
apiVersion: v1
kind: Service
metadata:
  name: appsrv
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: appsrv
  selector:
    app: appsrv
